[package]
name = "os_in_rust"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.9" }
heapless = "0.8.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
micromath = { version = "2.1.0", features = ["num-traits"] }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.9.8"
volatile = "0.2.6"
x86_64 = { version = "0.15.2" }
